--- a/NETWORK/ios_backup.yml
+++ b/NETWORK/ios_backup.yml
@@ -2,6 +2,7 @@
 - name: Start Backup of ios Devices
   hosts: all
   gather_facts: false
+  connection: network_cli
   vars:
     ansible_connection: ''
     ansible_network_os: ''
