--- a/NETWORK/ios_backup.yml
+++ b/NETWORK/ios_backup.yml
@@ -4,7 +4,7 @@
   gather_facts: false
   connection: network_cli
   vars:
-    ansible_connection: 'ios'
+    ansible_connection: 'ssh'
     ansible_network_os: 'ios'
     backup_path: ''
 
