--- a/NETWORK/ios_backup.yml
+++ b/NETWORK/ios_backup.yml
@@ -3,6 +3,7 @@
   hosts: all
   gather_facts: false
   connection: network_cli
+  become: yes
   vars:
     ansible_connection: 'ssh'
     ansible_network_os: 'ios'
