--- a/NETWORK/ios_backup_timestamp.yml
+++ b/NETWORK/ios_backup_timestamp.yml
@@ -19,5 +19,5 @@
       ios_config:
         backup: yes
         backup_options:
-          filename: "{{inventory_hostname}}-{{timestamp}}.cfg"
+#          filename: "{{inventory_hostname}}-{{timestamp}}.cfg"
           dir_path: "{{backup_path}}"
