--- a/INCAPSULA/uri_geo_block.yml
+++ b/INCAPSULA/uri_geo_block.yml
@@ -16,7 +16,7 @@
       uri:
         url: "https://my.imperva.com/api/prov/v1/sites/configure/acl"
         body_format: json
-        body: '{"countries" : "CA,US", "api_id" : "39469", "api_key" : "e36a2607-a7d0-416e-bb8c-ff1a86acd4bb", "site_id" : "91567883", "rule_id" : "api.acl.blacklisted_countries"}'
+        body: '{"api_id" : "{{api_id}}", "api_key" : "{{api_key}}", "site_id" : "{{site_id}}", "rule_id" : "api.acl.blacklisted_countries", "countries" : "CA,US"}'
         follow_redirects: none
         method: POST
       register: _result
