--- a/INCAPSULA/curl_install_cert.yml
+++ b/INCAPSULA/curl_install_cert.yml
@@ -4,10 +4,10 @@
   connection: local
   gather_facts: false
   vars:
-    ansible_host: ''
-    api_id: ''
-    api_key: ''
-    site_id: ''
+    #ansible_host: ''
+    api_id: '39469'
+    api_key: 'e36a2607-a7d0-416e-bb8c-ff1a86acd4bb'
+    site_id: '91567883'
     cert_base64: ''
     key_base64: ''
     passphrase: ''
