--- a/NETWORK/ios_backup_to_remote.yml
+++ b/NETWORK/ios_backup_to_remote.yml
@@ -5,10 +5,10 @@
   become: yes
   gather_facts: no
   vars:
-    ansible_network_os: ios
-    backup_path: /var/lib/awx/backups/backup_ios/
-    remote_uid: netapp
-    remote_host: mystorage1.us.domain.com
+    ansible_network_os: "ios"
+    backup_path: "/opt/backups/backup_ios/"
+    remote_uid: "netapp"
+    remote_host: "mystorage1.cc.domain.com"
 
   tasks:
     - name: Backup with register variable
@@ -16,7 +16,7 @@
         backup: yes
       register: config_output
 
-    - name: Rename backup
+    - name: Move backup to remove storage
       copy:
         src: "{{config_output.backup_path}}"
         dest: "{{remote_uid}}@{{remote_host}}:{{backup_path}}{{inventory_hostname}}.config"
