Linux install package with dnf

--- a/RHEL/linux_install_package.yml
+++ b/RHEL/linux_install_package.yml
@@ -7,7 +7,7 @@
   tasks:
     - name: Install {{ dnf_package }}
       dnf:
-        name: {{ dnf_package }}
+        name: "{{ dnf_package }}"
         state: present
         update_cache: True
 ...
