adding update_rpz yaml

--- a/RHEL/update_rpz.yml
+++ b/RHEL/update_rpz.yml
@@ -18,7 +18,7 @@
         line: '                                       {{ todaydate }}; serial'
         backrefs: yes
         
-    - name: "Add the new domain "{{ rpz_new_domain }}" line if it does not exist"
+    - name: Add the new domain "{{ rpz_new_domain }}" line if it does not exist
       lineinfile:
         path: "{{ rpz_zone }}"
         line: "*.{{ rpz_new_domain}}    CNAME   ."
