--- a/RHEL/update_rpz.yml
+++ b/RHEL/update_rpz.yml
@@ -8,7 +8,7 @@
 
   tasks:
     - name: Get date and time
-      shell: date +%yy%m%d%H%M
+      shell: date +%y%m%d%H%M
       register: todaydate
 
     - name: Replace RPZ zone serial number
