--- a/RHEL/update_rpz.yml
+++ b/RHEL/update_rpz.yml
@@ -27,9 +27,9 @@
       register: new_zone_record
 
     - name: Reload bind named
-      shell: service named reload
+      shell: systemctl reload named
       register: bind_reload
 
     - name: Move old RPZ zone files to old path
-      shell: mv "{{ rpz_zone }}.*~" "/var/named/data/old/" 
+      shell: mv "{{ rpz_zone }}.*" "/var/named/data/old/" 
       register: todaydate
