--- a/RHEL/update_rpz.yml
+++ b/RHEL/update_rpz.yml
@@ -31,5 +31,5 @@
       register: bind_reload
 
     - name: Move old RPZ zone files to old path
-      shell: mv "{{ rpz_zone }}.*" "/var/named/data/old/" 
+      shell: mv {{ rpz_zone }}.* /var/named/data/old/ 
       register: todaydate
