add snort rules

--- a/SNORT/add_snort_rule.yml
+++ b/SNORT/add_snort_rule.yml
@@ -15,7 +15,7 @@
         ids_rules_file: '/etc/snort/rules/local.rules'
         ids_rule_state: present
 
-    - name: Add snort rule that match a response of phish.opendns.com
+    - name: Add snort rule that match a response of phish.opendns.com, where 43 d7 41 85 is the hexadecimal equivalent of 67.215.65.133 IP
       include_role:
         name: "ansible_security.ids_rule"
       vars:
