--- a/SNORT/add_snort_rule.yml
+++ b/SNORT/add_snort_rule.yml
@@ -23,7 +23,7 @@
         ids_rules_file: '/etc/snort/rules/local.rules'
         ids_rule_state: present
 
-    - name: Add snort rule that match a response of adult.opendns.com
+    - name: Add snort rule that match a response of adult.opendns.com, where 43 d7 41 85 is the hexadecimal equivalent of 67.215.65.130 IP
       include_role:
         name: "ansible_security.ids_rule"
       vars:
@@ -31,7 +31,7 @@
         ids_rules_file: '/etc/snort/rules/local.rules'
         ids_rule_state: present
 
-    - name: Add snort rule that match a response of malware.opendns.com
+    - name: Add snort rule that match a response of malware.opendns.com, where 43 d7 41 85 is the hexadecimal equivalent of 67.215.65.150 IP
       include_role:
         name: "ansible_security.ids_rule"
       vars:
