--- a/RHEL/linux_performance_in_30s.yml
+++ b/RHEL/linux_performance_in_30s.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check Linux performance in less than 30 seconds
-  hosts: localhost
+  hosts: all
   become: true
   become_user: root
   become_method: sudo
