--- a/RHEL/linux_performance_in_30s.yml
+++ b/RHEL/linux_performance_in_30s.yml
@@ -41,6 +41,10 @@
       shell:
         cmd: top -b -n 3 >> /tmp/{{ansible_host}}_performance_analysis.txt
 
-    - name: Display results
-      shell:
-        cmd: cat /tmp/{{ansible_host}}_performance_analysis.txt
+    - name: Gathering all results
+      command: cat /tmp/{{ansible_host}}_performance_analysis.txt
+        register: command_output
+    
+    - name: Print file content to console
+      debug:
+        msg: "{{command_output.stdout}}"
