--- a/RHEL/linux_performance_in_30s.yml
+++ b/RHEL/linux_performance_in_30s.yml
@@ -42,9 +42,4 @@
         cmd: top -b -n 3 >> /tmp/{{ansible_host}}_performance_analysis.txt
 
     - name: Gathering all results
-      command: cat /tmp/{{ansible_host}}_performance_analysis.txt
-      register: command_output
-    
-    - name: Print file content to console
-      debug:
-        msg: "{{command_output.stdout}}"
+      command: mail -s "Host {{ansible_host}} performance results" rnunez@redhat.com < /tmp/{{ansible_host}}_performance_analysis.txt
