Check performances in 30 secs

--- a/RHEL/linux_performance_in_30s.yml
+++ b/RHEL/linux_performance_in_30s.yml
@@ -41,5 +41,13 @@
       shell:
         cmd: top -b -n 3 >> /tmp/{{ansible_host}}_performance_analysis.txt
 
-    - name: Now gather all results from {{ansible_host}}:/tmp/{{ansible_host}}_performance_analysis.txt
+    - name: Now gather results from /tmp/Gathering all results
+      command: cat /tmp/{{ansible_host}}_performance_analysis.txt
+      register: command_output
+    
+    - name: Print file content to console
+#      debug:
+#        msg: "{{command_output.stdout}}"
+      debug: msg="{{item}}"
+      with_items: command_output.stdout_lines
 ...
