--- a/RHEL/linux_performance_in_30s.yml
+++ b/RHEL/linux_performance_in_30s.yml
@@ -41,13 +41,11 @@
       shell:
         cmd: top -b -n 3 >> /tmp/{{ansible_host}}_performance_analysis.txt
 
-    - name: Now gather results from /tmp/{{ansible_host}}_performance_analysis.txt all results
-      command: cat /tmp/{{ansible_host}}_performance_analysis.txt
+    - name: Now the file /tmp/{{ansible_host}}_performance_analysis.txt is quite large
+      command: echo "Go a head and create a playbook to gather this data" >> /tmp/{{ansible_host}}_performance_analysis.txt
       register: command_output
     
-    - name: Print file content to console
-#      debug:
-#        msg: "{{command_output.stdout}}"
-      debug: msg="{{item}}"
-      with_items: "{{command_output.stdout_lines}}"
+#   - name: Print file content to console
+#      debug: msg="{{item}}"
+#      with_items: "{{command_output.stdout_lines}}"
 ...
