--- a/NETWORK/ios_user_sshkey2.yml
+++ b/NETWORK/ios_user_sshkey2.yml
@@ -19,7 +19,7 @@
       state: directory
 
   - name: create ssh keys for user {{ user }}
-    command: echo -e 'y\n'|ssh-keygen -q -t rsa -f /ssh-keys/{{ user }} -C "" -N ""
+    command: echo -e 'y\n'|ssh-keygen -q -t rsa -f /staging/{{ user }}/{{ user }} -C "" -N ""
     become: yes
     register: output
   - debug: var=output.stdout_lines
@@ -28,7 +28,7 @@
     ios_user:
       name: "{{ user }}"
       nopassword: True
-      sshkey: "{{ lookup('file', '/ssh-keys/{{ user }}.pub') }}"
+      sshkey: "{{ lookup('file', '/staging/{{ user }}/{{ user }}.pub') }}"
       privilege: 15
       state: present
 # https://docs.ansible.com/ansible/2.9/modules/ios_user_module.html#ios-user-module
