--- a/NETWORK/ios_user_sshkey3.yml
+++ b/NETWORK/ios_user_sshkey3.yml
@@ -8,6 +8,7 @@
 
   - name: create ssh keys for user {{ user }}
     command: echo -e 'y\n'|ssh-keygen -q -t rsa -f /staging/{{ user }}/{{ user }} -C "" -N ""
+    become: yes
     register: output
   - debug: var=output.stdout_lines
     
