--- a/NETWORK/ios_user_sshkey3.yml
+++ b/NETWORK/ios_user_sshkey3.yml
@@ -7,8 +7,8 @@
   tasks:
 
   - name: create ssh keys for user {{ user }}
-    command: echo -e 'y\n'|ssh-keygen -q -t rsa -f /staging/{{ user }}/{{ user }} -C "" -N ""
+    command: ssh-keygen -q -t rsa -f /staging/{{ user }}/{{ user }} -C "" -N ""
     become: yes
     register: output
   - debug: var=output.stdout_lines
-    
+    # echo -e 'y\n'|
