--- a/NETWORK/ios_user_sshkey2.yml
+++ b/NETWORK/ios_user_sshkey2.yml
@@ -17,7 +17,7 @@
       state: directory
 
   - name: create ssh keys for user {{ user }}
-    command: echo -e 'y\n'|ssh-keygen -q -t rsa -f /staging/{{ user }}/{{ user }} -C "" -N ""
+    command: ssh-keygen -q -t rsa -f /staging/{{ user }}/{{ user }} -C "" -N ""
     register: output
   - debug: var=output.stdout_lines
     become: yes
