--- a/VMWARE/deploy_vm_from_template.yml
+++ b/VMWARE/deploy_vm_from_template.yml
@@ -45,7 +45,7 @@
         networks:
         - name: "{{vm_network}}"
           type: static # Optionally put DHCP and remove the next three lines
-          ip: 192.168.0.180
+          ip: "{{ ip_address }}"
           netmask: 255.255.255.0
           gateway: 192.168.0.1
           wait_for_ip_address: yes
