--- a/VMWARE/deploy_vm_from_template.yml
+++ b/VMWARE/deploy_vm_from_template.yml
@@ -55,3 +55,10 @@
       debug:
         var: deploy_vm
 
+    - name: Wait for SSH to come up
+    wait_for:
+      host: "{{ ansible_host }}"
+      port: 22 
+      delay: 60 
+      timeout: 320 
+      state: started
