--- a/RHEL/check_fs_space.yml
+++ b/RHEL/check_fs_space.yml
@@ -7,7 +7,7 @@
      mount_all: []
   tasks:
 
-    - name: Get List of devices higher than 80%
+    - name: Get List of devices higher than 80% .
       set_fact:
         mount_all: "{{ mount_all + [{'host':ansible_host,'dev':item.device,'mount':item.mount,'free':(((item.size_available/1024)/1024)/1024)|round(2,'common'),'total':(((item.size_total/1024)/1024)/1024)|round(2,'common')}] }}"
       when: (item.size_total - item.size_available) > (item.size_total|float * 0.80)
