--- a/RHEL/RHEL_crypto_policies.yml
+++ b/RHEL/RHEL_crypto_policies.yml
@@ -2,6 +2,9 @@
 - hosts: all
   vars:
     crypto_value: '' # FUTURE #DEFAULT, LEGACY, and FIPS:OSPP
+  collections:
+    - redhat.rhel_system_roles
+    
   tasks:
   - name: Configure crypto policies
     include_role:
