--- a/NETWORK/eos_dns_compliance.yml
+++ b/NETWORK/eos_dns_compliance.yml
@@ -9,7 +9,7 @@
       - "192.168.1.11"
 
   tasks:
-    - name: Configure ipv4 configuration
+    - name: Showing current dns servers and domain
       arista.eos.eos_command:
         commands:
           - "show ip name-server | json"
