--- a/Demonstrations/AAP_daily_demo/create_instance.yml
+++ b/Demonstrations/AAP_daily_demo/create_instance.yml
@@ -45,7 +45,7 @@
       amazon.aws.ec2_instance:
         name: "Web Server"
         region: "{{region}}"
-        key_name: "zigfreed-ssh-key"
+        key_name: "{{ vpc_name}}-ssh-key"
         vpc_subnet_id: "{{vpc_subnet_id}}"
         instance_type: "{{instance_type}}"
         security_group: "{{ec2_security_group_name}}"
