--- a/Collections/requirements.yml
+++ b/Collections/requirements.yml
@@ -1,3 +1,7 @@
 ---
 collections:
   - azure.azcollection
+  - name: community.general
+  - name: amazon.aws
+  - name: ansible.posix
+  - name: community.aws
