--- a/Collections/requirements.yml
+++ b/Collections/requirements.yml
@@ -1,6 +1,6 @@
 ---
 collections:
-  - azure.azcollection
+  - name: azure.azcollection
   - name: community.general
   - name: amazon.aws
   - name: ansible.posix
